2005-02-21  Mark D. Baushke  <mdb@cvshome.org>

	* import.c (import): Avoid using assert with side effects it may
	be configured away using NDEBUG.
	(Patch from Frank Hemer <frank@hemer.org>.)

2005-02-08 Derek Price <derek@ximbiot.com>

	* build_src.com: Build stack.c on VMS.
	(Suggestion from Piet Schuermans <pschuermans@mac.com>.)

2005-02-01  Larry Jones  <lawrence.jones@ugs.com>

	* log.c (log_fileproc, log_expand_revlist): Add support for BASE tag.
	* sanity.sh (log): New tests for above.

2005-01-31 Derek Price <derek@ximbiot.com>

	* main.c: Update year in copyright notice to match GNU standards.
	* sanity.sh (version-1): Update to match.

2005-01-31 Derek Price <derek@ximbiot.com>

	* main.c: Rephrase --version message.
	* sanity.sh (version-1): Update to match.

2005-01-31 Derek Price <derek@ximbiot.com>

	* Makefile.am, add.c, admin.c, annotate.c, checkin.c, checkout.c,
	classify.c, commit.c, create_adm.c, cvs.h, cvsrc.c, diff.c, entries.c,
	find_names.c, hash.c, hash.h, history.h, import.c, lock.c, log.c,
	login.c, logmsg.c, main.c, mkmodules.c, modules.c, myndbm.c, no_diff.c,
	parseinfo.c, patch.c, rcs.c, rcs.h, rcscmds.c, recurse.c, remove.c,
	repos.c, root.c, root.h, server.h, stack.c, stack.h, status.c, subr.c,
	tag.c, update.c, vers_ts.c, version.c: Update copyright notices.

2005-01-29 Derek Price <derek@ximbiot.com>

	* log.c (log_usage): Add note about using -S with revision info
	supression and selection.
	(Suggestion from Dan Peterson <dbpete@aol.com>.)

2004-12-19  Larry Jones  <lawrence.jones@ugs.com>

	* expand_path.c (expand_path): Rewrite using offsets instead of
	pointers to simplify and avoid reallocation bugs.
	(Inspired by Jeremy Bopp <jeremy@motive.com>.)

2004-12-09 Derek Price <derek@ximbiot.com>

	* sanity.sh (tests): Add modules7.

2004-12-09 Derek Price <derek@ximbiot.com>

	* sanity.sh (modules7): New test group.
	(Based on a patch from Mark D. Baushke <mdb@cvshome.org>, based on a