@@ -1,3 +1,12 @@
+2005-02-22 Derek Price <derek@ximbiot.com>
+
+	* edit.c: Load watch settings before setting new ones with
+	`cvs watch on/off'.
+	(Original patch from Jim Hyslop <jhyslop@ieee.org>.)
+
+	* sanity.sh (watch6): New tests for same.
+	(Outline from Jim Hyslop <jhyslop@ieee.org>.)
+
 2005-02-21  Mark D. Baushke  <mdb@cvshome.org>
 
 	* import.c (import): Avoid using assert with side effects it may
